--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </article>
     </div>
   </section>
-
+<section>
    <div class="testimonial-slide">
     <div class="testimonial active">
       <p>"This school changed my life. The teachers genuinely care!"</p>
@@ -101,7 +101,7 @@
       <span class="next">&#10095;</span>
     </div>
   </div>
-  
+ </section> 
   <section id="feature-section" class="feature-section">
     <div class="container">
       <h2>Our Vision</h2>
